--- a/Android/RSCAndroid/app/build.gradle
+++ b/Android/RSCAndroid/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'joda-time:joda-time:2.9.6'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
