--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
-        "laravelcollective/annotations": "^5.3.0"
+        "laravelcollective/annotations": "^5.3.0",
+        "laravel/passport": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
