--- a/Android/RSCAndroid/app/build.gradle
+++ b/Android/RSCAndroid/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
     compile 'com.google.firebase:firebase-messaging:10.0.0'
     compile 'com.afollestad.material-dialogs:core:0.9.0.2'
+
+    compile 'com.facebook.android:facebook-android-sdk:4.17.0'
 }
 
 //This needs to be on the bottom, Firebase specific
