--- a/Android/RSCAndroid/app/src/main/AndroidManifest.xml
+++ b/Android/RSCAndroid/app/src/main/AndroidManifest.xml
@@ -5,11 +5,11 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+            android:name=".RSCApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:supportsRtl="true"
-            android:name=".RSCApplication"
             android:theme="@style/AppTheme">
         <activity android:name=".ui.main.MainActivity">
             <intent-filter>
@@ -24,8 +24,7 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
-        <service
-                android:name=".data.push.RSCFirebaseInstanceIdService">
+        <service android:name=".data.push.RSCFirebaseInstanceIdService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
@@ -36,6 +35,9 @@
                     android:name="com.facebook.sdk.ApplicationId"
                     android:value="@string/facebook_app_id"/>
         </application>
+
+        <activity android:name=".ui.login.LoginActivity">
+        </activity>
     </application>
 
 </manifest>
