--- a/Android/RSCAndroid/app/src/main/AndroidManifest.xml
+++ b/Android/RSCAndroid/app/src/main/AndroidManifest.xml
@@ -12,11 +12,6 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity android:name=".ui.main.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
 
         <service android:name=".data.push.RSCFirebaseMessagingService">
@@ -30,13 +25,21 @@
             </intent-filter>
         </service>
 
-        <application android:label="@string/app_name">
-            <meta-data
-                    android:name="com.facebook.sdk.ApplicationId"
-                    android:value="@string/facebook_app_id"/>
-        </application>
+        <meta-data
+                android:name="com.facebook.sdk.ApplicationId"
+                android:value="@string/facebook_app_id"/>
 
-        <activity android:name=".ui.login.LoginActivity">
+        <activity
+                android:name=".ui.login.LoginActivity"
+                android:windowSoftInputMode="adjustResize">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:scheme="@string/fb_login_protocol_scheme"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
     </application>
 
