--- a/Android/RSCAndroid/app/src/main/AndroidManifest.xml
+++ b/Android/RSCAndroid/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-            android:name=".RSCCApplication"
+            android:name=".RSCApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
