--- a/Android/RSCAndroid/app/build.gradle
+++ b/Android/RSCAndroid/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
     compile 'com.google.firebase:firebase-messaging:10.0.0'
+    compile 'com.google.firebase:firebase-auth:10.0.0'
+    compile 'com.google.android.gms:play-services-auth:10.0.0'
     compile 'com.afollestad.material-dialogs:core:0.9.0.2'
 
     compile 'com.facebook.android:facebook-android-sdk:4.17.0'
