--- a/Android/RSCAndroid/app/src/main/AndroidManifest.xml
+++ b/Android/RSCAndroid/app/src/main/AndroidManifest.xml
@@ -14,12 +14,7 @@
         <activity android:name=".ui.main.MainActivity">
         </activity>
 
-        <activity android:name=".ui.dashboard.DashboardActivity">
-            <intent-filter>
-            <action android:name="android.intent.action.MAIN"/>
-            <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
+        <activity android:name=".ui.dashboard.DashboardActivity"/>
 
         <service android:name=".data.push.RSCFirebaseMessagingService">
             <intent-filter>
@@ -40,7 +35,7 @@
                 android:name=".ui.login.LoginActivity"
                 android:windowSoftInputMode="adjustResize">
             <intent-filter>
-
+                <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.intent.action.VIEW"/>
 
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -48,7 +43,7 @@
 
                 <data android:scheme="@string/fb_login_protocol_scheme"/>
 
-
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity android:name=".ui.registration.RegistrationActivity">
