Add google maps dependency

--- a/Android/RSCAndroid/app/build.gradle
+++ b/Android/RSCAndroid/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
     testCompile 'junit:junit:4.12'
 
+    compile 'com.google.android.gms:play-services-maps:10.0.0'
+
     compile 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.google.code.gson:gson:2.6.2'
