--- a/Android/RSCAndroid/app/build.gradle
+++ b/Android/RSCAndroid/app/build.gradle
@@ -21,8 +21,6 @@ android {
         buildConfigField STRING, API_URL, '"http://138.68.85.154:8000/"'
     }
 
-
-
     buildTypes {
         release {
             minifyEnabled false
@@ -43,6 +41,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.google.android.gms:play-services-maps:10.0.0'
+    compile 'com.google.android.gms:play-services-location:10.0.0'
 
     compile 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
