--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -1,5 +1,5 @@
-/storage/oauth-private.key
-/storage/oauth-public.key
+storage/oauth-private.key
+storage/oauth-public.key
 /node_modules
 /public/storage
 /vendor
