--- a/Android/RSCAndroid/app/src/main/AndroidManifest.xml
+++ b/Android/RSCAndroid/app/src/main/AndroidManifest.xml
@@ -13,10 +13,6 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".ui.main.MainActivity">
-        </activity>
-        <activity android:name=".ui.dashboard.DashboardActivity">
-        </activity>
 
         <service android:name=".data.push.RSCFirebaseMessagingService">
             <intent-filter>
@@ -48,6 +44,7 @@
 
         <activity
                 android:name=".ui.login.LoginActivity"
+                android:screenOrientation="portrait"
                 android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
@@ -58,13 +55,24 @@
                 <data android:scheme="@string/fb_login_protocol_scheme"/>
             </intent-filter>
         </activity>
+
         <activity
                 android:name=".ui.registration.RegistrationActivity"
                 android:theme="@style/RegistrationTheme"
-                android:windowSoftInputMode="adjustResize">
-        </activity>
-        <activity android:name=".ui.teams.TeamActivity">
-        </activity>
+                android:screenOrientation="portrait"
+                android:windowSoftInputMode="adjustResize"/>
+
+        <activity
+                android:name=".ui.main.MainActivity"
+                android:screenOrientation="portrait"/>
+
+        <activity
+                android:name=".ui.dashboard.DashboardActivity"
+                android:screenOrientation="portrait"/>
+
+        <activity
+                android:name=".ui.teams.TeamActivity"
+                android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
