--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.3.*",
         "laravelcollective/annotations": "^5.3.0",
         "laravel/passport": "^1.0",
-        "laravel/socialite": "^2.0"
+        "laravel/socialite": "^2.0",
+        "sngrl/php-firebase-cloud-messaging": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
