--- a/Android/RSCAndroid/app/src/main/AndroidManifest.xml
+++ b/Android/RSCAndroid/app/src/main/AndroidManifest.xml
@@ -79,6 +79,10 @@
                 android:name=".ui.dashboard.DashboardActivity"
                 android:screenOrientation="portrait"/>
 
+        <activity
+                android:name=".ui.details.EventDetailsActivity"
+                android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
