--- a/Android/RSCAndroid/app/build.gradle
+++ b/Android/RSCAndroid/app/build.gradle
@@ -35,17 +35,17 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+
+
+
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:design:25.0.1'
-    compile "com.android.support:support-core-utils:25.0.1"
+    compile 'com.android.support:support-core-utils:25.0.1'
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
-    testCompile 'junit:junit:4.12'
-
     compile 'com.google.android.gms:play-services-maps:10.0.0'
     compile 'com.google.android.gms:play-services-location:10.0.0'
-
     compile 'com.jakewharton:butterknife:8.4.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
@@ -57,10 +57,11 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:10.0.0'
     compile 'com.afollestad.material-dialogs:core:0.9.0.2'
     compile 'com.roughike:bottom-bar:2.0.2'
-
     compile 'com.facebook.android:facebook-android-sdk:4.17.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-
+    compile 'com.android.support:support-v4:25.0.1'
+    testCompile 'junit:junit:4.12'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 }
 
 //This needs to be on the bottom, Firebase specific
