--- a/Android/RSCAndroid/app/build.gradle
+++ b/Android/RSCAndroid/app/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     })
 
 
-
+    compile 'com.google.zxing:core:3.3.0'
 
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:design:25.0.1'
