--- a/Android/RSCAndroid/app/src/main/AndroidManifest.xml
+++ b/Android/RSCAndroid/app/src/main/AndroidManifest.xml
@@ -85,6 +85,8 @@
         </activity>
         <activity android:name=".ui.game.GameActivity">
         </activity>
+
+        <activity android:name=".ui.qr.BarCodeActivity"/>
     </application>
 
 </manifest>
